--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="container" id="home">
         <div class="main">
             <div class="detail">
-                <h3>Hi, Welcome to My WebZ</h3>
+                <h3>Hi, Welcome to My Portfolio</h3>
                 <h1>I'm <span style="color:#f9532d;">Subikksha Ranganathan</span></h1>
                 <p>"Crafting digital success one website at a time. Your vision, our web solutions."</p>
                 <div class="social">
@@ -51,7 +51,7 @@
             </div>
             <div class="img-sec">
                 <div class="images">
-                    <img src="f-1-removebg-preview.png" alt="" class="img-w">
+                    <img src="pic1.jpg" alt="" class="img-w">
                 </div>
             </div>
         </div>
