--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="detail">
                 <h3>Hi, Welcome to My Portfolio</h3>
                 <h1>I'm <span style="color:#f9532d;">Subikksha Ranganathan</span></h1>
-                <p>"Crafting digital success one website at a time. Your vision, our web solutions."</p>
+                <p>"Designing elegant and functional digital solutions for a modern world."</p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/subikksha-ranganathan-7bb193256" style="--socialAni:1"><i class='bx bxl-linkedin'></i></a>
                     
